<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu">
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share_selector"
        android:title="@string/menu_share"
        app:showAsAction="always"
        android:enabled="false"
        android:orderInCategory="0"/>
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_selector"
        android:title="@string/menu_search"
        app:showAsAction="always"
        android:orderInCategory="1"/>
    <item android:id="@+id/action_refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item android:id="@+id/action_mark_as_read"
        android:title="@string/menu_mark_as_read"
        android:orderInCategory="3"
        app:showAsAction="never"/>
</menu>