<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/list_selector">
    <FrameLayout
        android:id="@+id/fl_rss_item_image_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <ProgressBar
            android:id="@+id/pb_rss_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateOnly="true"
            android:indeterminate="true"/>

        <ImageView
            android:id="@+id/iv_rss_item_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop" />

    </FrameLayout>

    <io.bloc.android.blocly.ui.widget.RobotoTextView
        style="@style/Headline"
        android:id="@+id/tv_rss_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_headline"
        android:layout_below="@id/fl_rss_item_image_header"
        robotoFont="Bold"/>

    <CheckBox
        android:id="@+id/cb_item_rss_check_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_rss_item_title"
        android:button="@drawable/btn_check_checkbox"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"/>

    <CheckBox
        android:id="@+id/cb_item_rss_favorite_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cb_item_rss_check_mark"
        android:button="@drawable/btn_star_checkbox"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"/>

    <io.bloc.android.blocly.ui.widget.RobotoTextView
        style="@style/Caption"
        android:id="@+id/tv_rss_item_feed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_rss_item_title"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_source"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/cb_item_rss_check_mark"/>

    <io.bloc.android.blocly.ui.widget.RobotoTextView
        style="@style/Body1"
        android:id="@+id/tv_rss_item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_rss_item_feed_title"
        android:text="@string/placeholder_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@id/cb_item_rss_favorite_star"
        android:lines="3"
        android:ellipsize="end"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_rss_item_expanded_content_wrapper"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_rss_item_feed_title"
        android:layout_toLeftOf="@id/cb_item_rss_favorite_star"
        android:visibility="gone"
        android:orientation="vertical">

        <io.bloc.android.blocly.ui.widget.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Body1"
            android:id="@+id/tv_rss_item_content_full" />

        <io.bloc.android.blocly.ui.widget.RobotoButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button"
            android:background="@drawable/btn_select"
            android:text="@string/visit_site"
            android:id="@+id/tv_rss_item_visit_site"
            android:layout_marginTop="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"/>
    </LinearLayout>
</RelativeLayout>